--- a/source/_posts/新的主题.md
+++ b/source/_posts/新的主题.md
@@ -91,16 +91,29 @@ gitalk:
 
 ### 网页代码压缩
 
-通过 gulp 来压缩 html、css、js 的代码。
+通过 gulp 来压缩 html、css、js 的代码，压缩完了之后的代码，在 chrome 的调试工具中，会变成特别长的一行~
 
 ### css/js内联
+
+使用 [hexo-filter-asset-inline](https://github.com/JamesPan/hexo-filter-asset-inline)。
+
+先 npm 下载这个库，然后在每个需要内联的 js、css 文件地址后面加上 ``?__inline=true``。由于 hexo 没有一个统一的地方存放 css、js 的地址，而各个主题引用外部 css、js 的地方又各有不同，因此只能在编辑器里面搜索，然后一处处手动添加了。
+
+全部地址修改完成后，打开网页应只需要加载 html 文件以及少数一个图片文件。
+
+![](https://oss.kherrisan.cn/20200410221659.png)
 
 ### 全站加速（氪金上云）
 
 所有图片放到阿里云 OSS 上去，并且使用全站加速（实际上就是 CDN）来加速对 https://www.kherrisan.cn 这个域名下所有资源的访问。
 
+## 持续集成
+
+我想实现的效果是，我在本地完成撰写后，只需要提交 source 代码，然后 Github 的 Action 会自动帮我完成压缩、编译、部署的工作。
+
 ## 参考资料
 
-![Nexmoe 文档](https://docs.nexmoe.com/hexo/#遇到问题怎么办？)
-![Nexmoe 作者的文章](https://nexmoe.com/661812793.html#资源合并)
-![其他文章](https://io-oi.me/tech/hexo-next-optimization/#利用-gulp-压缩代码)
+[Nexmoe 文档](https://docs.nexmoe.com/hexo/#遇到问题怎么办？)
+[博客，我优化了什么？](https://nexmoe.com/661812793.html#资源合并)
+[hexo优化之——使用gulp压缩资源](https://todebug.com/use-gulp-with-hexo/)
+
