--- a/source/_posts/新的主题.md
+++ b/source/_posts/新的主题.md
@@ -15,7 +15,7 @@ date: 2020-04-10 20:06:23
 
 之前一直使用 Hexo 的 next 主题来呈现博客，最近觉得 next 太素了，想换一个花哨一些的~
 
-## Nexmoe
+## Fluid
 
 这个主题还是我在 Github 首页被推荐到的，看来 Github 的推荐算法越来越智能了，连博客主题的个人喜好都能作为推荐的标准了（开个玩笑）。
 
@@ -113,7 +113,55 @@ gitalk:
 
 ## 持续集成
 
-我想实现的效果是，我在本地完成撰写后，只需要提交 source 代码，然后 Github 的 Action 会自动帮我完成压缩、编译、部署的工作。
+我想实现的效果是，我在本地完成撰写后，只需要提交 source 代码，然后 Github 的 Action 会自动帮我完成压缩、编译、部署的工作。代码如下：
+
+```yml
+name: Hexo CI
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+    - name: webfactory/ssh-agent
+      uses: webfactory/ssh-agent@v0.2.0
+      with:
+        # Private SSH key to register in the SSH agent
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - uses: actions/checkout@v2
+    - uses: snickerbockers/submodules-init@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm i -g hexo-cli
+    - run: npm i
+    - run: hexo clean && hexo g --debug && gulp
+    - name: Commit files
+      run: |
+        git add .
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -m "CI" -a
+        git pull
+    - name: GitHub Push
+      uses: ad-m/github-push-action@v0.5.0
+      with:
+        # Token for the repo. Can be passed in using $\{{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.CI_TOKEN }}
+
+```
 
 ## 参考资料
 
